# number-encoding

./: CHANGELOG.md  Cargo.toml  README.md  test.sh
.github/workflows/: ci.yml
src/: combinadics.rs  factoradics.rs  lib.rs  multinadics.rs  sequences.rs
tests/: exhaustive.rs
