[package]
name = "number-encoding"
version = "0.2.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ia0/number-encoding"
description = "Combinatorial and factorial number systems"
include = ["Cargo.toml", "LICENSE", "README.md", "src/*"]
edition = "2021"

[features]
default = ["std"]
alloc = []
std = ["alloc"]
